--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable(dram_read_latency dram_read_latency.cpp)
 add_executable(dram_throughput dram_throughput.cpp)
 
-target_link_libraries(dram_throughput pthread)
+target_link_libraries(dram_read_latency numa)
+target_link_libraries(dram_throughput pthread numa)
